[metadata]
name = nchu-sdk
version = 0.0.1
author = Tomy Hsieh
author_email = tomy0000000@gmail.com
description = SDK for accessing NCHU Portal System
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tomy0000000/NCHU-SDK
project_urls =
    Bug Tracker = https://github.com/tomy0000000/NCHU-SDK/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
